--- a/root/index.html
+++ b/root/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <header>
-        <img src="img/logo.png">
+        <a href="https://worldofwarcraft.com/es-es/"><img src="img/logo.png"></a>
         <section class="Textobanner">
             <p>Horda</p>
             <p>Alianza</p>
